fix(icon-button-bar): override OverflowMenu` styles, prevent potential override of size variable

--- a/src/components/IconButtonBar/_mixins.scss
+++ b/src/components/IconButtonBar/_mixins.scss
@@ -1,10 +1,12 @@
 ////
 /// Icon button bar component.
-/// @group IconButtonBar
+/// @group icon-button-bar
 /// @copyright IBM Security 2019
 ////
 
-$sizes: (
+/// Variation dimensions.
+/// @type Map<String, Length>
+$icon-button__sizes: (
   'sm': 4,
   'md': 5,
   'lg': 6,
@@ -13,21 +15,32 @@ $sizes: (
 
 @mixin icon-button-bar {
   $root: &;
+
   display: flex;
   overflow: none;
 
-  @each $size, $unit in $sizes {
-    &--#{$size} {
-      min-width: carbon--mini-units($unit);
+  @each $icon-button__size, $icon-button__unit in $icon-button__sizes {
+    /// Variation dimensions.
+    /// @type Length
+    $icon-button-bar__sizing__dimensions: carbon--mini-units(
+      $count: $icon-button__unit,
+    );
+
+    &--#{$icon-button__size} {
+      min-width: $icon-button-bar__sizing__dimensions;
 
       #{$root}__overflow-menu {
-        height: carbon--mini-units($unit);
-        width: carbon--mini-units($unit);
+        height: $icon-button-bar__sizing__dimensions;
+        width: $icon-button-bar__sizing__dimensions;
       }
     }
+  }
 
-    &__overflow-menu-options--#{$size}.#{$prefix}--overflow-menu-options[data-floating-menu-direction='top']::after {
-      width: carbon--mini-units($unit);
+  &__overflow-menu-options {
+    box-shadow: unset;
+
+    &.#{$prefix}--overflow-menu-options::after {
+      height: 0;
     }
   }
 }
